--- a/DI-App/Controllers/ProfileVC/ProfileVC.xib
+++ b/DI-App/Controllers/ProfileVC/ProfileVC.xib
@@ -15,11 +15,11 @@
                 <outlet property="emailTxt" destination="Pvn-eH-zfw" id="vDs-j4-OSc"/>
                 <outlet property="fullNameTxt" destination="7Vx-KQ-DiR" id="gL9-MW-rIG"/>
                 <outlet property="linkedinTxt" destination="NDP-Pv-nVF" id="7vF-vN-y9R"/>
-                <outlet property="mainView" destination="i5M-Pr-FkT" id="olM-Fm-BXU"/>
                 <outlet property="phoneNumberTxt" destination="Fok-an-V0n" id="nJb-a1-iVP"/>
                 <outlet property="profilePic" destination="DU5-rr-bt6" id="ujJ-3r-uWg"/>
                 <outlet property="sessionTxt" destination="alV-I8-Ivj" id="tsS-hG-snJ"/>
                 <outlet property="tapTheImage" destination="0tX-mP-sSP" id="l0P-cH-z8W"/>
+                <outlet property="view" destination="i5M-Pr-FkT" id="3NH-G5-fwv"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -145,7 +145,7 @@
                     <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <items>
-                        <navigationItem title="Title" id="mPP-vq-zZd">
+                        <navigationItem id="mPP-vq-zZd">
                             <barButtonItem key="leftBarButtonItem" title="Item" image="hamburger-icon" id="0bx-Mz-R8Y">
                                 <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
