--- a/DI-App/Controllers/SideMenu/SideMenuViewController.xib
+++ b/DI-App/Controllers/SideMenu/SideMenuViewController.xib
@@ -21,7 +21,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="daf-Ze-sgJ">
-                    <rect key="frame" x="16" y="20" width="343" height="71"/>
+                    <rect key="frame" x="16" y="20" width="343" height="30"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fdD-NK-FuW">
                             <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
@@ -32,30 +32,42 @@
                                 <action selector="goToMyClandar:" destination="-1" eventType="touchUpInside" id="uST-qp-Czc"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihS-e2-EaM">
-                            <rect key="frame" x="0.0" y="41" width="343" height="30"/>
-                            <state key="normal" title="Logout">
-                                <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
-                            </state>
-                            <connections>
-                                <action selector="logMeOut:" destination="-1" eventType="touchUpInside" id="vaa-uZ-hel"/>
-                            </connections>
-                        </button>
                     </subviews>
                 </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ihS-e2-EaM">
+                    <rect key="frame" x="16" y="607" width="343" height="30"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="cu8-G7-Ygp"/>
+                    </constraints>
+                    <state key="normal" title="Logout">
+                        <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="15"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="logMeOut:" destination="-1" eventType="touchUpInside" id="vaa-uZ-hel"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <gestureRecognizers/>
             <constraints>
                 <constraint firstItem="daf-Ze-sgJ" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="9jg-Pt-tkb"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="ihS-e2-EaM" secondAttribute="bottom" constant="30" id="CHR-AV-GSH"/>
+                <constraint firstItem="ihS-e2-EaM" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="MH3-Yw-vc9"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="daf-Ze-sgJ" secondAttribute="trailing" constant="16" id="TjT-J9-Q5Y"/>
                 <constraint firstItem="daf-Ze-sgJ" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="eq6-Bs-qrr"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ihS-e2-EaM" secondAttribute="trailing" constant="16" id="v6Q-em-xsn"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outletCollection property="gestureRecognizers" destination="58v-dS-uaR" appends="YES" id="bQd-9S-To2"/>
             </connections>
-            <point key="canvasLocation" x="-400" y="-275"/>
+            <point key="canvasLocation" x="-400.5" y="-275.5"/>
         </view>
         <swipeGestureRecognizer direction="right" id="58v-dS-uaR">
             <connections>
