--- a/DI-App/Controllers/ClassesVC/Classes.xib
+++ b/DI-App/Controllers/ClassesVC/Classes.xib
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -33,7 +32,7 @@
                     <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                     <items>
                         <navigationItem title="Courses" id="Oiy-Qc-Ni6">
-                            <barButtonItem key="leftBarButtonItem" title="Item" image="hamburger-icon" landscapeImage="Image" largeContentSizeImage="hamburger-icon" id="d9Z-uV-EHk">
+                            <barButtonItem key="leftBarButtonItem" title="Item" image="icons8-menu-50" id="d9Z-uV-EHk">
                                 <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <action selector="menu:" destination="-1" id="m6z-vQ-vOf"/>
@@ -58,7 +57,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Image" width="1200" height="1004"/>
-        <image name="hamburger-icon" width="50" height="50"/>
+        <image name="icons8-menu-50" width="25" height="25"/>
     </resources>
 </document>
