--- a/DI-App/Controllers/login/Landpage.xib
+++ b/DI-App/Controllers/login/Landpage.xib
@@ -4,19 +4,37 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Landpage" customModule="DI_App" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Landpage" customModule="DI_App" customModuleProvider="target">
+            <connections>
+                <outlet property="mainView" destination="iN0-l3-epB" id="qPp-4t-PEp"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="laucnh" translatesAutoresizingMaskIntoConstraints="NO" id="2gl-65-Tdd">
+                    <rect key="frame" x="-12" y="-13" width="399" height="668"/>
+                </imageView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="2gl-65-Tdd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="-12" id="6H3-cp-owM"/>
+                <constraint firstAttribute="trailing" secondItem="2gl-65-Tdd" secondAttribute="trailing" constant="-12" id="IE6-ED-gin"/>
+                <constraint firstItem="2gl-65-Tdd" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="-33" id="Xvb-hT-6oP"/>
+                <constraint firstItem="2gl-65-Tdd" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" constant="-12" id="ch8-Bf-czo"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <point key="canvasLocation" x="69.5" y="80.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="laucnh" width="600" height="1067"/>
+    </resources>
 </document>
